0.14    17 May 2003
        Added "Wanted Pages" link to navbar, thanks to Simon Cozens for
        the idea.

        Fixed bug noticed by Dom Hargreaves - website metadata wasn't
        making it through the preview.

0.13    17 May 2003
        Added some more stylesheet hooks.
        Tweaked OpenGuides::Diff to make it testable, added a start at tests.
        Lat and long now stored to only 6dp instead of millions.
        Added edit field for map link.

0.12    14 May 2003
        Added OpenGuides::CGI to manage cookies and things, used this to
        do more code tidying.  Added edit box position option to preferences.

0.11    14 May 2003
        Added newpage.cgi for an easy way to create new pages.

        Took loads of repeated code (for extracting and packaging metadata
        variables) out of wiki.cgi into OpenGuides::Template.

0.10    11 May 2003
        Added OpenGuides::Diff to provide nice diff output between
        node versions.

        Added OpenGuides::Template to handle Template Toolkit stuff in a
        more testable and reusable way than just bunging it in wiki.cgi

0.09    10 May 2003
        Added OpenGuides::UK::PubCrawl and pubcrawl.cgi as a start at a
        pub crawl generator.

        Added OpenGuides::Utils to make it easier to write little standalone
        scripts like supersearch.cgi, pubcrawl. cgi, etc.  Made wiki.cgi and
        supersearch.cgi use it, and lost loads of duplicated code in the
        process, hurrah.

0.08    3 May 2003

        Added fuzzy matching capability -
            action=index;index_type=fuzzy_title_match;index_value=hollborne
        Someone needs to write a nice search box interface for this.

        Fixed edit_conflict template and preview method to cope with stale
        checksum - passes through all the metadata properly now and offers
        a side by side comparison of what you input and what is stored.

        RDF output for node is now encoding-agnostic (used to have UTF-8