@@ -1,47 +1,51 @@
-OpenGuides Version 0.08
-=======================
+NAME
+    OpenGuides - A complete web application for managing a
+    collaboratively-written guide to a city or town.
 
-This distribution contains the OpenGuides wiki software. It requires:
+DESCRIPTION
+    The OpenGuides software provides the framework for a
+    collaboratively-written city guide. It is similar to a wiki but provides
+    somewhat more structured data storage allowing you to annotate wiki
+    pages with information such as category, location, and much more. It
+    provides searching facilities including "find me everything within a
+    certain distance of this place". Every page includes a link to a
+    machine-readable (RDF) version of the page.
 
- - Module::Build for installation
- - other Perl modules as detailed in the PREREQUISITES file
- - a webserver (such as Apache)
- - a Postgres or MySQL database dedicated to the OpenGuides installation
+BUGS AND CAVEATS
+    At the moment, the location data uses a United-Kingdom-specific module,
+    so the location features might not work so well outside the UK.
 
-See the INSTALL file for details on how to install OpenGuides.
+SEE ALSO
+    * The OpenGuides development site, temporarily at
+    <http://un.earth.li/~kake/cgi-bin/wiki.cgi>
+    * <http://the.earth.li/~kake/cgi-bin/openguides/vegan-oxford.cgi>, an
+    experimental OpenGuides install mirroring the Vegan Guide to Oxford at
+    <http://www.earth.li/~kake/vegan-oxford/>
+    * <http://www.ox.compsoc.net/oxfordguide/>, an Open Guide to Oxford run
+    by Dominic Hargreaves (what a star)
+    * grubstreet, the motivation behind OpenGuides; at
+    <http://grault.net/grubstreet/>
 
+FEEDBACK
+    If you have a question, a bug report, or a patch, or you're interested
+    in joining the development team, please contact
+    grubstreet@hummous.earth.li (moderated mailing list, will reach all
+    current developers but you'll have to wait for your post to be approved)
+    or kake@earth.li (a real person who may take a little while to reply to
+    your mail if she's busy).
 
-About OpenGuides
-================
+AUTHOR
+    The OpenGuides Project (grubstreet@hummous.earth.li)
 
+COPYRIGHT
+         Copyright (C) 2003 The OpenGuides Project.  All Rights Reserved.
 
-**** THIS SOFTWARE IS VERY ALPHA.  It is released solely for those who ****
-****     know what they're doing and want to play around with it.      ****
+    The OpenGuides distribution is free software; you can redistribute it
+    and/or modify it under the same terms as Perl itself.
 
+CREDITS
+    Programming by Earle Martin, Kake Pugh, Ivor Williams. Testing and bug
+    reporting by Cal Henderson, Bob Walker, Kerry Bosworth, Dominic
+    Hargreaves, Simon Cozens, among others. Much of the Module::Build stuff
+    copied from the Siesta project <http://siesta.unixbeard.net/>
 
-The OpenGuides software provides the framework for a collaboratively-written
-city guide.  It is similar to a wiki but provides somewhat more structured
-data storage allowing you to annotate wiki pages with information such as
-category, location, and much more.  It provides searching facilities
-including "find me everything within a certain distance of this place".
-Every page includes a link to a machine-readable (RDF) version of the page.
-
-At the moment, the location data uses a United-Kingdom-specific module,
-so the location features might not work so well outside the UK.
-
-
-Feedback
-========
-
-If you have a question, a bug report, or a patch, or you're interested
-in joining the development team, please contact grubstreet@hummous.earth.li
-(moderated mailing list, will reach all current developers but you'll have
-to wait for your post to be approved) or kake@earth.li (a real person who
-may take a little while to reply to your mail if she's busy).
-
-
-Authors
-=======
-
-As of version 0.08, the development team consists of Earle Martin,
-Kake Pugh, and Ivor Williams.
