@@ -1,0 +1,3 @@
+site_name  = CGI::Wiki Test Site
+script_url = http://wiki.example.com/
+script_name = 
